--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -35,7 +35,7 @@
                                      },
                                      
                                      xAxis: {
-                                     categories: ['Creating Value', 'Empathy', 'Claiming Value', 'Assertiveness'],
+                                     categories: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
                                      tickmarkPlacement: 'on',
                                      lineWidth: 0
                                      },
@@ -54,7 +54,7 @@
                                      },
                                      series: [{
                                               name: 'Score',
-                                              type: 'line',
+                                              type: 'area',
                                               data: [%@],
                                               pointPlacement: 'on'
                                               }]
