--- a/Negotiation3/reports/typeR.html
+++ b/Negotiation3/reports/typeR.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <head>
-    
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        p {
+			margin:24px;
+		}
+    </style>
 </head>
 <body>
-    <div>Your profile shows you as having above average skills on the interpersonal scale (10 being average). Being good at asserting your own interests while understanding other people is certainly possible (though most people don’t feel that way). But you should ask yourself why that double-advantage doesn’t produce better results on the vertical outcome scale. You may want to reconsider the entries that you made. You also should take advantage of the 360-degree feedback of this app. Your colleagues may see you differently than you see yourself. If so, that’s good to know!</div>
+    <div>
+		<p><strong>Type R</strong></p>
+	</div>
+	<div>
+		<p>Your profile shows you as having above average skills on the interpersonal scale (4 being average). Being good at asserting your own interests while understanding other people is certainly possible (though most people don't feel that way). But you should ask yourself why that double-advantage doesn't produce better results on the vertical outcome scale. You may want to reconsider the entries that you made.</p>
+	</div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
