--- a/Negotiation3/reports/typeY.html
+++ b/Negotiation3/reports/typeY.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <head>
-    
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        p {
+			margin:24px;
+		}
+    </style>
 </head>
 <body>
-    <div>Your profile shows that you see yourself as having about the same level of ability in each of the four tested skills (asserting, empathizing, claiming value, and creating value). All of these are important in negotiation, but some cases call for strengths in particular areas. If you are haggling over price in a used car lot, you may need to express yourself assertively. But if you are working with a colleague or a long-time customer, understanding the other party may be paramount. Check out the skill-building tips for ways you can stretch yourself so you can adapt to different situations.</div>
+    <div>
+		<p><strong>Type Y</strong></p>
+	</div>
+	<div>
+		<p>Your profile shows that you see yourself as having about the same level of ability in each of the four tested skills (asserting, empathizing, claiming value, and creating value). All of these are important in negotiation, but some cases call for strengths in particular areas.<br><br>If you are haggling over price in a used car lot, you may need to express yourself assertively. But if you are working with a colleague or a long-time customer, understanding the other party may be paramount. Check out the skill-building tips for ways you can stretch yourself so you can adapt to different situations.</p>
+	</div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
