--- a/Negotiation3/reports/delimaW+.html
+++ b/Negotiation3/reports/delimaW+.html
@@ -3,7 +3,7 @@
     
 </head>
 <body>
-    <div>Delima W+</div>
+    <div>Delima C</div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
