--- a/Negotiation3/reports/typeG.html
+++ b/Negotiation3/reports/typeG.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <head>
-    
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        p {
+			margin:24px;
+		}
+    </style>
 </head>
 <body>
-    <div>Your profile shows that you see yourself as having strengths in both understanding other parties and creating value. You didn’t weight them heavily, though. Perhaps that’s because you have some confidence in the other two areas or maybe it’s because you see yourself as having a rather balanced skill set. Nevertheless, when you check out the skill-building tips, give special attention to how you can strengthen your ability to assert your interests and get a decent slice of the value you create.</div>
+    <div>
+		<p><strong>Type G</strong></p>
+	</div>
+	<div>
+		<p>Your profile shows that you see yourself as having strengths in both understanding other parties and creating value. You didn't weight them heavily, though. Perhaps that's because you have some confidence in the other two areas or maybe it's because you see yourself as having a rather balanced skill set.<br><br>Nevertheless, when you check out the skill-building tips, give special attention to how you can strengthen your ability to assert your interests and get a decent slice of the value you create.</p>
+	</div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
