--- a/Negotiation3/reports/typeO.html
+++ b/Negotiation3/reports/typeO.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <head>
-    
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        p {
+			margin:24px;
+		}
+    </style>
 </head>
 <body>
-    <div>Your profile shows you as having above average skills on the outcome scale. (You gave yourself more than 10 points on both creating and claiming value.) That’s not always easy in practice. Creating value usually involves disclosing some of your interests so that you can find mutually beneficial trades. But if your counterpart bluffs or lies, he or she may capture much of the resulting value. Also give some thought to why you seem to do well in respect to outcomes even though your interpersonal self-ratings aren’t as high. You may want to reconsider the entries that you made. You also should take advantage of the 360-degree feedback of this app. Your colleagues may see you differently than you see yourself. If so, that’s good to know!</div>
+    <div>
+		<p><strong>Type O</strong></p>
+	</div>
+	<div>
+		<p>Your profile shows you as having above average skills on the outcome scale. (You gave yourself more than 4 points on both creating and claiming value.) That's not always easy in practice.<br><br>Creating value usually involves disclosing some of your interests so that you can find mutually beneficial trades. But if your counterpart bluffs or lies, he or she may capture much of the resulting value. Also give some thought to why you seem to do well in respect to outcomes even though your interpersonal self-ratings aren't as high. You may want to reconsider the entries that you made.</p>
+	</div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
