--- a/Negotiation3/reports/typeW+.html
+++ b/Negotiation3/reports/typeW+.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <head>
-    
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        p {
+			margin:24px;
+		}
+    </style>
 </head>
 <body>
-    <div>About 40 percent of the users who have completed this test believe that their negotiation strengths lie in asserting themselves and claiming value. Your scores in this realm are higher than most of those people. That strength may serve you well when you have to contend with hard bargainers, but make sure that you can adapt when you are in more collaborative situations where there is potential for joint gain. Check out the skill-building tips and give speciation attention to how you can enhance your skill at reading other people’s motivations and craft creative solutions.</div>
+    <div>
+		<p><strong>Type C</strong></p>
+	</div>
+	<div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vitae nulla purus. Duis venenatis, urna at suscipit bibendum, purus ligula blandit quam, in consequat nulla metus et dui. Suspendisse laoreet commodo mollis. Quisque ultrices aliquam lacinia. Vestibulum faucibus, purus eget bibendum pellentesque, ante arcu aliquet risus, vel adipiscing metus mauris vel arcu. Morbi sed mollis nisi. Aenean sed eleifend justo. Praesent varius lorem lorem, vitae venenatis nibh commodo vitae.</p>
+	</div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
