--- a/Negotiation3/reports/typeunknown.html
+++ b/Negotiation3/reports/typeunknown.html
@@ -1,8 +1,19 @@
 <!doctype html>
 <head>
-    
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        p {
+			margin:24px;
+		}
+    </style>
 </head>
 <body>
-    <div>type unknown</div>
+    <div>
+		<p><strong>Type Unknown</strong></p>
+	</div>
+	<div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vitae nulla purus. Duis venenatis, urna at suscipit bibendum, purus ligula blandit quam, in consequat nulla metus et dui. Suspendisse laoreet commodo mollis. Quisque ultrices aliquam lacinia. Vestibulum faucibus, purus eget bibendum pellentesque, ante arcu aliquet risus, vel adipiscing metus mauris vel arcu. Morbi sed mollis nisi. Aenean sed eleifend justo. Praesent varius lorem lorem, vitae venenatis nibh commodo vitae.</p>
+	</div>
 </body>
 </html>
