Trenholm’s Friday Commits

--- a/Negotiation3/reports/create.html
+++ b/Negotiation3/reports/create.html
@@ -9,15 +9,16 @@
     </style>
 </head>
 <body>
-	<p> 
-	
-		<span data-icon="&#xe016;" style="font-size: 24px"></span>&nbsp;&nbsp;<b>Create value</b>
-      	    
+	<div style="margin:24px">
+		<h4><span data-icon="&#xe016;"></span>&nbsp;&nbsp;Create value</h4>
+   	</div>
+
+	<p> 	    
 		<ul class="list-group">
-	        <li class="list-group-item" style="text-align: left">Negotiate how you negotiate. </li>
-	        <li class="list-group-item" style="text-align: left">Use your interpersonal skills to build trust.</li>
-	        <li class="list-group-item" style="text-align: left">Make mutually beneficial trades by identifying differences in valuation, expectations, and attitudes toward risk.</li>
-	        <li class="list-group-item" style="text-align: left">Don't play the wrong game. It's hard to haggle and be creative at the same time.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Negotiate how you negotiate. </li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Use your interpersonal skills to build trust.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Make mutually beneficial trades by identifying differences in valuation, expectations, and attitudes toward risk.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Don't play the wrong game. It's hard to haggle and be creative at the same time.</li>
 	    </ul>
 	</p>
 
