--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -18,15 +18,15 @@
 		<img src="animation1.gif"/>
 	</div> -->
 	
-	<div class="container">
-		<div class="btn-group btn-group-justified">
-			<button type="button" class="btn btn-default">&nbsp;&nbsp;<span data-icon="&#xe049;" style="font-size: 30px"></span>&nbsp;&nbsp;</button>
-		  	<button type="button" class="btn btn-default">&nbsp;&nbsp;<span data-icon="&#xe021;" style="font-size: 30px"></span>&nbsp;&nbsp;</button>
-			<button type="button" class="btn btn-default">&nbsp;&nbsp;<span data-icon="&#xe050;" style="font-size: 30px"></span>&nbsp;&nbsp;</button>
-		  	<button type="button" class="btn btn-default">&nbsp;&nbsp;<span data-icon="&#xe016;" style="font-size: 30px"></span>&nbsp;&nbsp;</button>		  
-		</div>
+	<div>
+	<div class="btn-group">
+	  <button type="button" class="btn btn-default"><span data-icon="&#xe049;" style="font-size: 18px"></span></button>
+	  <button type="button" class="btn btn-default"><span data-icon="&#xe021;" style="font-size: 20px"></span></button>
+	  <button type="button" class="btn btn-default"><span data-icon="&#xe050;" style="font-size: 24px"></span></button>
+	  <button type="button" class="btn btn-default"><span data-icon="&#xe016;" style="font-size: 24px"></span></button>
 	</div>
-	
+	</div>
+		
     <div class="list-group">
 		<li class="list-group-item" style="text-align: left"><strong>Expand your skill set</strong></li>
       	<a href="understand.html" class="list-group-item">Understanding the other side</a>
