--- a/Negotiation3/reports/typeO.html
+++ b/Negotiation3/reports/typeO.html
@@ -9,12 +9,25 @@
     </style>
 </head>
 <body>
-    <div>
-		<p><strong>Type O</strong></p>
+    <div style="margin:24px">
+		<h4>Type O</h4>
 	</div>
+
 	<div>
-		<p>Your profile shows you as having above average skills on the outcome scale. (You gave yourself more than 4 points on both creating and claiming value.) That's not always easy in practice.<br><br>Creating value usually involves disclosing some of your interests so that you can find mutually beneficial trades. But if your counterpart bluffs or lies, he or she may capture much of the resulting value. Also give some thought to why you seem to do well in respect to outcomes even though your interpersonal self-ratings aren't as high. You may want to reconsider the entries that you made.</p>
+		<p>Your profile shows you as having above average skills on the outcome scale. (You gave yourself more than 4 points on both creating and claiming value.) That's not always easy in practice.<br><br>Creating value usually involves disclosing some of your interests so that you can find mutually beneficial trades. But if your counterpart bluffs or lies, he or she may capture much of the resulting value. Also give some thought to why you seem to do well in respect to outcomes even though your interpersonal self-ratings aren't as high. 
+			
+			
+	<div class="alert alert-danger" style="margin:24px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe03d;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:500">
+				You may want to reconsider the entries that you made.
+			</div>
+		</div>
 	</div>
+			
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
