--- a/Negotiation3/reports/typeR.html
+++ b/Negotiation3/reports/typeR.html
@@ -9,12 +9,26 @@
     </style>
 </head>
 <body>
-    <div>
-		<p><strong>Type R</strong></p>
+    <div style="margin:24px">
+		<h4>Type R</h4>
 	</div>
+
 	<div>
-		<p>Your profile shows you as having above average skills on the interpersonal scale (4 being average). Being good at asserting your own interests while understanding other people is certainly possible (though most people don't feel that way). But you should ask yourself why that double-advantage doesn't produce better results on the vertical outcome scale. You may want to reconsider the entries that you made.</p>
+		<p>Your profile shows you as having above average skills on the interpersonal scale (4 being average). Being good at asserting your own interests while understanding other people is certainly possible (though most people don't feel that way). But you should ask yourself why that double-advantage doesn't produce better results on the vertical outcome scale.</p>
 	</div>
+		 
+			
+	<div class="alert alert-danger" style="margin:24px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe03d;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:500">
+				You may want to reconsider the entries that you made.
+			</div>
+		</div>
+	</div>
+			
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
