--- a/Negotiation3/reports/assert.html
+++ b/Negotiation3/reports/assert.html
@@ -9,14 +9,16 @@
     </style>
 </head>
 <body>
-	<p>
-		<span data-icon="&#xe021;" style="font-size: 24px"></span>&nbsp;&nbsp;<b>Assert your interests</b>
-    
+	<div style="margin:24px">
+		<h4><span data-icon="&#xe021;"></span>&nbsp;&nbsp;Assert your interests</h4>
+	</div>
+
+	<p>    
 		<ul class="list-group">
-	        <li class="list-group-item" style="text-align: left">Build up your BATNA (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
-	        <li class="list-group-item" style="text-align: left">Focus on their BATNA (their no-deal alternative). Just because you need them doesn't mean that they don't need you.</li>
-	        <li class="list-group-item" style="text-align: left">Practice in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
-	        <li class="list-group-item" style="text-align: left">Don't oversell. Research shows that people in weaker positions tend to talk too much.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your BATNA (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Focus on their BATNA (their no-deal alternative). Just because you need them doesn't mean that they don't need you.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Practice in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Don't oversell. Research shows that people in weaker positions tend to talk too much.</li>
     	</ul>
 	</p>
 
