--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -1,22 +1,49 @@
 <!doctype html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="jquery.js"></script>
+    <script src="jquery-1.11.0.min.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
     <script src="charts-examples.js"></script>
     <script src="minimal.js"></script>
+    <script src="js/tab.js"></script>
     <script src="modules/exporting.js"></script>
-
-    <style>
-        p {
-			margin:24px;
-		}
-    </style>
 
 </head>
 <body>
+    <div style="margin:24px">
+      <ul id="myTab" class="nav nav-pills">
+        <li class="active"><a href="#part1" data-toggle="tab">Part 1</a></li>
+        <li><a href="#part2" data-toggle="tab">Part 2</a></li>
+        <li><a href="#part3" data-toggle="tab">Part 3</a></li>
+        <li><a href="#part4" data-toggle="tab">Part 4</a></li>
+      </ul>
+      <div id="myTabContent" class="tab-content" style="padding:5px">
+        <div class="tab-pane fade in active" id="part1">
+			<p>Two questions you just answered deal with the interpersonal dimension of negotiation, specifically, asserting oneself and understanding others. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example. Or appearing cooperative might be misread as being weak.)</p>
+		    <div id="interpersonalDimension" align="center" style="min-width: 300px; max-width: 300px; height: 240px; margin: 10px;"></div>
+        </div>
+        <div class="tab-pane fade" id="part2">
+			<p>Two other questions on the test address outcomes. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. SpecifIcally, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
+		    <div id="outcomeDimension" align="center" style="min-width: 300px; max-width: 300px; height: 240px; margin: 10px;"></div>
+        </div>
+        <div class="tab-pane fade" id="part3">
+			<p>You can think of the interpersonal scale as representing the "means" of negotiation and the outcome scale as the "ends." Putting the two scales together reveals common bargaining styles. In the example below, the two scales intersect at the zero-zero. Here the user gave himself four 5s for the four skills, counting out from the center for each one.</p>
+		    <div id="equalRatings" align="center" style="min-width: 300px; max-width: 300px; height: 240px; margin: 10px;"></div>
+			<p>That balance may look nice, but certain situations demand certain skills more than others.</p>
+        </div>
+        <div class="tab-pane fade" id="part4">
+			<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better. Most of the people who've taken this test fall into one of two categories.</p>
+		    <div id="empatheticValueCreators" align="center" style="min-width: 300px; max-width: 300px; height: 280px; margin: 10px;"></div>
+		    <div id="assertiveValueClaimers" align="center" style="min-width: 300px; max-width: 300px; height: 280px; margin: 10px;"></div>
+			<p>They make practical sense. A person who is strong relationally and understands the true needs of his or her counterpart is more likely to spot creative, problem-solving opportunities. And someone whose strength is self-advocacy is more likely to capture a larger slice of the pie (though less value may be available to grab).</p>
+        </div>
+      </div>
+    </div><!-- /example -->
+	
+<!--
     <div>
 		<p>Two questions you just answered deal with the interpersonal dimension of negotiation, specifically, asserting oneself and understanding others. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example. Or appearing cooperative might be misread as being weak.)</p>
 	</div>
@@ -33,10 +60,12 @@
 		<p>That balance may look nice, but certain situations demand certain skills more than others.</p>
 		<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better. Most of the people who've taken this test fall into one of two categories.</p>
 	</div>
-    <div id="empatheticValueCreators" style="min-width: 260px; max-width: 540px; height: 260px; margin: 24px; padding: 5px;"></div>
-    <div id="assertiveValueClaimers" style="min-width: 260px; max-width: 540px; height: 260px; margin: 24px; padding: 5px;"></div>
+    <div id="empatheticValueCreators" style="min-width: 260px; max-width: 540px; height: 280px; margin: 24px; padding: 5px;"></div>
+    <div id="assertiveValueClaimers" style="min-width: 260px; max-width: 540px; height: 280px; margin: 24px; padding: 5px;"></div>
 	<div>	
 		<p>They make practical sense. A person who is strong relationally and understands the true needs of his or her counterpart is more likely to spot creative, problem-solving opportunities. And someone whose strength is self-advocacy is more likely to capture a larger slice of the pie (though less value may be available to grab).</p>
 	</div>
+-->	
+	
 </body>
 </html>
