--- a/Negotiation3/reports/maximize.html
+++ b/Negotiation3/reports/maximize.html
@@ -9,14 +9,16 @@
     </style>
 </head>
 <body>
-	<p>
-		<span data-icon="&#xe050;" style="font-size: 24px"></span>&nbsp;&nbsp;<b>Maximize your share</b>
+	<div style="margin:24px">
+		<h4><span data-icon="&#xe050;"></span>&nbsp;&nbsp;Maximize your share</h4>
+	</div>
     
+	<p>
 		<ul class="list-group">
-	        <li class="list-group-item" style="text-align: left">Don't get "anchored." Work from your number. Not theirs.</li>
-	        <li class="list-group-item" style="text-align: left">Watch the clock. If the other party is under a deadline, use that to your advantage.</li>
-	        <li class="list-group-item" style="text-align: left">Try "post-settlement settlement." After reaching a firm agreement, suggest that you review the terms to see if adjusting the terms might help both parties.</li>
-	        <li class="list-group-item" style="text-align: left">Avoid the winner's curse. You may wonder if you could have gotten more. The only way to know for sure is to demand too much and blow up the deal.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get "anchored." Work from your number. Not theirs.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Watch the clock. If the other party is under a deadline, use that to your advantage.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Try "post-settlement settlement." After reaching a firm agreement, suggest that you review the terms to see if adjusting the terms might help both parties.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the winner's curse. You may wonder if you could have gotten more. The only way to know for sure is to demand too much and blow up the deal.</li>
 		</ul>
 	</p>
 
