--- a/Negotiation3/reports/typeG.html
+++ b/Negotiation3/reports/typeG.html
@@ -9,12 +9,25 @@
     </style>
 </head>
 <body>
-    <div>
-		<p><strong>Type G</strong></p>
+    <div style="margin:24px">
+		<h4>Type G</h4>
 	</div>
+	
 	<div>
-		<p>Your profile shows that you see yourself as having strengths in both understanding other parties and creating value. You didn't weight them heavily, though. Perhaps that's because you have some confidence in the other two areas or maybe it's because you see yourself as having a rather balanced skill set.<br><br>Nevertheless, when you check out the skill-building tips, give special attention to how you can strengthen your ability to assert your interests and get a decent slice of the value you create.</p>
+		<p>About half the users who have completed this test believe that their negotiation strengths lie in understanding other parties and creating value. Your own scores in this realm are higher than most of those people. That strength can serve you well in collaborative situations, but make sure that you can protect yourself in more competitive, price-driven transactions.</p> 
+	</div>	
+		
+	<div class="alert alert-info" style="margin:24px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe030;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:500">
+				Check out the skill-building tips and give speciation attention to how you can enhance your ability to assert your interests and get a decent share of the value you create.
+			</div>
+		</div>
 	</div>
+	
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
