--- a/Negotiation3/reports/typeW.html
+++ b/Negotiation3/reports/typeW.html
@@ -9,12 +9,25 @@
     </style>
 </head>
 <body>
-    <div>
-		<p><strong>Type W</strong></p>
+    <div style="margin:24px">
+		<h4>Type W</h4>
 	</div>
+
 	<div>
-		<p>Your profile shows that you see yourself as having strengths in asserting yourself and claiming your share value. You didn't weight them heavily, though. Perhaps that's because you have some confidence in the other two areas or maybe it's because you see yourself as having a rather balanced skill set.<br><br>Nevertheless, when you check out the skill-building tips, give special attention to how you can enhance your ability to understand what's motivating other parties and how to get a decent share of the value you create.</p>
+		<p>About 40% of the users who have completed this test believe that their negotiation strengths lie in asserting themselves and claiming value. Your scores in this realm are higher than most of those people.<br><br>That strength may serve you well when you have to contend with hard bargainers, but make sure that you can adapt when you are in more collaborative situations where there is potential for joint gain.</p>
+	</div>	
+			
+	<div class="alert alert-info" style="margin:24px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe030;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:500">
+				Check out the skill-building tips and give speciation attention to how you can enhance your skill at reading other people's motivations and craft creative solutions.
+			</div>
+		</div>
 	</div>
+			
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
