--- a/Negotiation3/reports/understand.html
+++ b/Negotiation3/reports/understand.html
@@ -9,14 +9,16 @@
     </style>
 </head>
 <body>
-    <p>
-		<span data-icon="&#xe049;" style="font-size: 24px"></span>&nbsp;&nbsp;<b>Understand the other side</b>
+	<div style="margin:24px">
+		<h4><span data-icon="&#xe049;"></span>&nbsp;&nbsp;Understand the other side</h4>
+	</div>
     
+	<p>
 		<ul class="list-group">
-	        <li class="list-group-item" style="text-align: left">Inquire. Without realizing it, many negotiators fail to test their assumptions about the other parties needs and perceptions.</li>
-	        <li class="list-group-item" style="text-align: left">Listen deeply. Don't prejudge. Be alert for ideas you can build on.</li>
-	        <li class="list-group-item" style="text-align: left">Consult your own feelings. If you are feeling anxious, maybe they are, too.</li>
-	        <li class="list-group-item" style="text-align: left">"Go to the balcony." Follow Bill Ury's advice and try to view your interaction as if you were a member of the audience, sitting way back, taking everything in.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Inquire. Without realizing it, many negotiators fail to test their assumptions about the other parties needs and perceptions.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Listen deeply. Don't prejudge. Be alert for ideas you can build on.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">Consult your own feelings. If you are feeling anxious, maybe they are, too.</li>
+	        <li class="list-group-item" style="text-align: left; font-size:14px">"Go to the balcony." Follow Bill Ury's advice and try to view your interaction as if you were a member of the audience, sitting way back, taking everything in.</li>
 		</ul>
 	</p>        
 
