Trenholm’s HTML commits

--- a/Negotiation3/reports/create.html
+++ b/Negotiation3/reports/create.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
+
     </style>
 </head>
 <body>
-	<div style="margin:24px">
+	<div style="margin:20px">
 		<h4><span data-icon="&#xe016;"></span>&nbsp;&nbsp;Create value</h4>
    	</div>
 
@@ -26,5 +28,7 @@
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
     <script src="modules/exporting.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/collapse.js"></script>
 </body>
 </html>
