--- a/Negotiation3/reports/typeO.html
+++ b/Negotiation3/reports/typeO.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
 <body>
-    <div style="margin:24px">
+    <div style="margin:20px">
 		<h4>Type O</h4>
 	</div>
 
@@ -17,7 +18,7 @@
 		<p>Your profile shows you as having above average skills on the outcome scale. (You gave yourself more than 4 points on both creating and claiming value.) That's not always easy in practice.<br><br>Creating value usually involves disclosing some of your interests so that you can find mutually beneficial trades. But if your counterpart bluffs or lies, he or she may capture much of the resulting value. Also give some thought to why you seem to do well in respect to outcomes even though your interpersonal self-ratings aren't as high. 
 			
 			
-	<div class="alert alert-danger" style="margin:24px">
+	<div class="alert alert-danger" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe03d;" style="font-size: 24px"></span>
