--- a/Negotiation3/reports/typeR.html
+++ b/Negotiation3/reports/typeR.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
 <body>
-    <div style="margin:24px">
+    <div style="margin:20px">
 		<h4>Type R</h4>
 	</div>
 
@@ -18,7 +19,7 @@
 	</div>
 		 
 			
-	<div class="alert alert-danger" style="margin:24px">
+	<div class="alert alert-danger" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe03d;" style="font-size: 24px"></span>
