--- a/Negotiation3/reports/typeW.html
+++ b/Negotiation3/reports/typeW.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
 <body>
-    <div style="margin:24px">
+    <div style="margin:20px">
 		<h4>Type W</h4>
 	</div>
 
@@ -17,7 +18,7 @@
 		<p>About 40% of the users who have completed this test believe that their negotiation strengths lie in asserting themselves and claiming value. Your scores in this realm are higher than most of those people.<br><br>That strength may serve you well when you have to contend with hard bargainers, but make sure that you can adapt when you are in more collaborative situations where there is potential for joint gain.</p>
 	</div>	
 			
-	<div class="alert alert-info" style="margin:24px">
+	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
