--- a/Negotiation3/reports/typeY.html
+++ b/Negotiation3/reports/typeY.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
 <body>
-    <div style="margin:24px">
+    <div style="margin:20px">
 		<h4>Type Y</h4>
 	</div>
 	
 	<div>
 		<p>Your profile shows that you see yourself as having about the same level of ability in each of the four tested skills (asserting, empathizing, claiming value, and creating value). All of these are important in negotiation, but some cases call for strengths in particular areas.<br><br>If you are haggling over price in a used car lot, you may need to express yourself assertively. But if you are working with a colleague or a long-time customer, understanding the other party may be paramount.</p> 
 			
-	<div class="alert alert-info" style="margin:24px">
+	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
