--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <head>
-    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="css/style.css" />    
 </head>
 <body>
     <div>Negotiation Profiles</div>
