--- a/Negotiation3/reports/assert.html
+++ b/Negotiation3/reports/assert.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
 <body>
-	<div style="margin:24px">
+	<div style="margin:20px">
 		<h4><span data-icon="&#xe021;"></span>&nbsp;&nbsp;Assert your interests</h4>
 	</div>
 
