--- a/Negotiation3/reports/delimaC.html
+++ b/Negotiation3/reports/delimaC.html
@@ -1,42 +1,101 @@
-<!doctype html>
-<head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="charts-examples.js"></script>
-    <script src="minimal.js"></script>
-    <script src="modules/exporting.js"></script>
 
-    <style>
-        p {
-			margin:24px;
-		}
-    </style>
+<!DOCTYPE html>
+<html>
+<head>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="css/style.css" />
+
+  <style type="text/css">
+
+    * {
+      padding: 0;
+      margin: 0;
+      border: 0;
+    }
+
+    body {
+	  background: #fff;
+      padding: 15px;
+      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    #demo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      cursor: hand;
+      cursor: -moz-grab;
+      cursor: -webkit-grab;
+      cursor: grab;
+    }
+
+    #demo p {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 0 20px;
+      margin-bottom: 15px;
+    }
+
+  </style>
 
 </head>
 <body>
-    <div>
-		<p>Two questions you just answered deal with the interpersonal dimension of negotiation, specifically, asserting oneself and understanding others. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example. Or appearing cooperative might be misread as being weak.)</p>
-	</div>
-    <div id="interpersonalDimension" style="min-width: 260px; max-width: 540px; height: 220px; margin: 24px; padding: 5px;"></div>
-	<div>	
-		<p>Two other questions on the test address outcomes. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. SpecifIcally, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
-	</div>
-    <div id="outcomeDimension" style="min-width: 260px; max-width: 540px; height: 220px; margin: 24px; padding: 5px;"></div>
-	<div>	
-		<p>You can think of the interpersonal scale as representing the "means" of negotiation and the outcome scale as the "ends." Putting the two scales together reveals common bargaining styles. In the example below, the two scales intersect at the zero-zero. Here the user gave himself four 5s for the four skills, counting out from the center for each one.</p>
-	</div>
-    <div id="equalRatings" style="min-width: 260px; max-width: 540px; height: 220px; margin: 24px; padding: 5px;"></div>
-	<div>	
-		<p>That balance may look nice, but certain situations demand certain skills more than others.</p>
-		<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better. Most of the people who've taken this test fall into one of two categories.</p>
-	</div>
-    <div id="empatheticValueCreators" style="min-width: 260px; max-width: 540px; height: 260px; margin: 24px; padding: 5px;"></div>
-    <div id="assertiveValueClaimers" style="min-width: 260px; max-width: 540px; height: 260px; margin: 24px; padding: 5px;"></div>
-	<div>	
-		<p>They make practical sense. A person who is strong relationally and understands the true needs of his or her counterpart is more likely to spot creative, problem-solving opportunities. And someone whose strength is self-advocacy is more likely to capture a larger slice of the pie (though less value may be available to grab).</p>
-	</div>
+	
+	<div class="navbar navbar-default navbar-fixed-top" align="center" role="navigation" style="font-size: 12px; font-weight:200; color: #FF9F33">
+	  <span class="ion-ios7-arrow-thin-left"></span>&nbsp;SWIPE TO VIEW MORE&nbsp;<span class="ion-ios7-arrow-thin-right"></span>
+	</div>	
+
+  <div id="demo" >
+    <ul>
+      <li class="first dragend-page">
+		    <div id="interpersonalDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>Two questions you answered deal with the interpersonal dimension of negotiation: asserting oneself and understanding others. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship or appearing cooperative might be misread as being weak.)</p>
+      </li>
+      <li class="dragend-page">
+		    <div id="outcomeDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>Two other questions on the test address outcomes. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. Specifically, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
+      </li>
+      <li class="middle dragend-page">
+		    <div id="equalRatings" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>You can think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>. Putting the two scales together reveals common bargaining styles. In the example above, the two scales intersect at the zero-zero. Here the user gave himself four 5s for the four skills, counting out from the center for each one.</p>
+      </li>
+      <li class="dragend-page">
+		    <div id="empatheticValueCreators" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>That balance may look nice, but certain situations demand certain skills more than others.</p>
+			<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better. Most of the people who've taken this test fall into one of two categories. The first, Empathetic Value Creators, is depicted above.</p>
+      </li>
+      <li class="last dragend-page">
+		    <div id="assertiveValueClaimers" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>They make practical sense. A person who is strong relationally and understands the true needs of his or her counterpart is more likely to spot creative, problem-solving opportunities. And someone whose strength is self-advocacy is more likely to capture a larger slice of the pie (though less value may be available to grab).</p>
+      </li>
+    </ul>
+  </div>
+
+  <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="dragend.js"></script>
+
+  <script>
+
+    $(function() {
+      new Dragend($("#demo").get(0), {
+        afterInitialize: function() {
+          $("#demo").css("visibility", "visible");
+        }
+      });
+    });
+
+  </script>
+
+  <script src="highcharts.js"></script>
+  <script src="highcharts-more.js"></script>
+  <script src="charts-examples.js"></script>
+  <script src="minimal.js"></script>
+  <script src="modules/exporting.js"></script>
+
 </body>
 </html>
