--- a/Negotiation3/reports/maximize.html
+++ b/Negotiation3/reports/maximize.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
