--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
@@ -23,7 +23,7 @@
         <img src="mw.jpg" width="125px" height="125px" class="img-circle">
 	</div>
 	<div>
-        <p style="margin: 24px;">
+        <p style="margin: 20px;">
             <strong>Michael Wheeler</strong> is an author, professor, and mediator whose work is at the forefront of negotiation scholarship and practice. He is a professor of Management Practice at the <a href="http://www.hbs.edu/" style="color:red">Harvard Business School</a> where he teaches Negotiation as well as a variety of executive courses. He advises corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.
         </p>
     </div>
