--- a/Negotiation3/reports/typeG.html
+++ b/Negotiation3/reports/typeG.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <style>
         p {
-			margin:24px;
+			margin:20px;
 		}
     </style>
 </head>
 <body>
-    <div style="margin:24px">
+    <div style="margin:20px">
 		<h4>Type G</h4>
 	</div>
 	
@@ -17,7 +18,7 @@
 		<p>About half the users who have completed this test believe that their negotiation strengths lie in understanding other parties and creating value. Your own scores in this realm are higher than most of those people. That strength can serve you well in collaborative situations, but make sure that you can protect yourself in more competitive, price-driven transactions.</p> 
 	</div>	
 		
-	<div class="alert alert-info" style="margin:24px">
+	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
